core/src/style/components/pickCollapse.css
.pick-collapse {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  border-radius: 8px;
  padding: 10px
}

.pick-collapse.shadow .open-item {
  -webkit-transform: scale(1.01);
  transform: scale(1.01);
  -webkit-box-shadow: 0 2px 15px 0 rgba(0,0,0,.05);
  box-shadow: 0 2px 15px 0 rgba(0,0,0,.05);
  margin-top: 5px;
  border-bottom: 0 solid transparent;
  margin-bottom: 10px;
  border-radius: 6px
}

.pick-collapse.shadow .open-item .con-content-item {
  opacity: 1
}

.pick-collapse.margin .pick-collapse-item {
  margin-top: 10px;
  margin-bottom: 10px;
  -webkit-box-shadow: 0 2px 15px 0 rgba(0,0,0,.05);
  box-shadow: 0 2px 15px 0 rgba(0,0,0,.05);
  border-radius: 5px;
  border-bottom: 0 solid transparent
}

.pick-collapse.margin .open-item .con-content-item {
  opacity: 1
}

.pick-collapse.border {
  border: 1px solid rgba(0,0,0,.1);
  padding: 0
}

.pick-collapse.border .pick-collapse-item {
  border-bottom: 1px solid rgba(0,0,0,.1)
}

.pick-collapse.border .open-item .con-content-item {
  opacity: 1
}

.pick-collapse-item {
  border-bottom: 1px solid rgba(0,0,0,.04);
  cursor: pointer;
  -webkit-transition: all .25s ease;
  transition: all .25s ease
}

.pick-collapse-item.open-item .con-content--item {
  opacity: 1
}

.pick-collapse-item.disabledx {
  opacity: .5;
  cursor: default;
  pointer-events: none;
  z-index: 999
}

.pick-collapse-item:last-child {
  border-bottom: 0 solid transparent!important
}

.pick-collapse-item--header {
  display: block;
  padding: 10px;
  position: relative
}

.pick-collapse-item--header,.pick-collapse-item--icon-header {
  -webkit-transition: all .25s ease;
  transition: all .25s ease
}

.pick-collapse-item--icon-header {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translate(-50%,-50%);
  display: block;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 5px;
}

.pick-collapse-item--content {
  overflow: hidden;
  -webkit-transition: all .2s ease;
  transition: all .2s ease
}

